feat(be): add day-summary endpoint
